--- a/error-codes.cabal
+++ b/error-codes.cabal
@@ -16,8 +16,9 @@ library
   exposed-modules:
     Foreign.C.Error.Describe
   build-depends:
-    , base >=4.11.1.0 && <5
-    , primitive >=0.6.4
+    , base >=4.11.1 && <5
+    , primitive >=0.7 && < 0.8
+    , primitive-unlifted >= 0.1 && < 0.2
   hs-source-dirs: src
   default-language: Haskell2010
   ghc-options: -Wall -O2
