--- a/error-codes.cabal
+++ b/error-codes.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.2
 name: error-codes
-version: 0.1.1.0
+version: 0.1.2.0
 synopsis: Error code functions
 homepage: https://github.com/andrewthad/error-codes
 bug-reports: https://github.com/andrewthad/error-codes/issues
@@ -20,6 +20,9 @@ library
     , base >=4.11.1 && <5
     , primitive >=0.7 && < 0.10
     , primitive-unlifted >= 0.1 && < 2.2
+    , text-short >=0.1.5
+    , bytestring >=0.11
+    , text >=2.0
   hs-source-dirs: src
   default-language: Haskell2010
   ghc-options: -Wall -O2
